Name:                   regex-simple
Version:                0.0.0.1
Synopsis:               A simple regex-base extension
Description:            Extends the regex-base over a simple flexible SubMatches that should cover most general regex queries.
Homepage:               http://github.com/cdornan/regex-simple
Author:                 Chris Dornan
License:                BSD3
Maintainer:             chris.dornan@irisconnect.co.uk
Copyright:              Chris Dornan
Category:               Text
Build-type:             Simple

Cabal-version:          >= 1.14


Source-repository head
    type: git
    location:           https://github.com/cdornan/regex-simple


Library
    Hs-Source-Dirs:    src

    Exposed-modules:
        Text.Regex.Simple

    Build-depends:
        array                  >= 0.4         ,
        base                   >= 4           ,
        regex-base             >= 0.93.2

    Default-Language:   Haskell2010


Executable regex-simple-examples
    Hs-Source-Dirs:    src

    Main-is: regex-simple-examples.hs

    Default-Language:   Haskell2010

    Build-depends:
      regex-simple                            ,
      array                    >= 0.4         ,
      base                     >= 4           ,
      regex-base               >= 0.93.2      ,
      regex-tdfa               >= 1.2.0
